# esp32-wireless-scanner

./: .gitignore  .gitmodules  .sdkconfig  ;  CMakeLists.txt  README.md  TODO.md  build.sh  partitions.csv  run.sh  sdkconfig  source-first.sh
components/lvgl__lvgl_esp32_drivers/: .component_hash  lvgl_helpers.c
components/lvgl__lvgl_esp32_drivers/lvgl_tft/: ili9341.c
components/lvgl__lvgl_esp32_drivers/lvgl_touch/: tp_spi.c  xpt2046.c
main/: CMakeLists.txt  conf.h  esp32-wifi-scanner.c  file-writing.c  file-writing.h  gui.c  gui.h  http-server.c  http-server.h  idf_component.yml  net-scanner.c  net-scanner.h  port-scanner.c  port-scanner.h  scanner.c  scanner.h
